// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Start Block Alexa 1`] = `
.c5 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c5 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c20 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3c6997;
}

.c20 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5589eb;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c22 .c4 {
  color: #fff;
}

.c23 .c4 {
  color: #6e849a;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c10 .c11:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c19 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c19 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c19,
.vf-canvas__step.vf-canvas__node--highlighted .c19 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c19:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c19 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c19 {
  z-index: -1;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c8 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c8 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c8:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c8 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c8 {
  z-index: -1;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c16 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c21:hover {
  color: #4d8de6;
}

.c17 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c17,
.vf-canvas__node--disabled .c17 {
  cursor: inherit;
}

.c17::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c17.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c7:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c6 {
  max-width: 100%;
}

.vf-canvas--merging .c6,
.vf-canvas--creating-link .c6 {
  pointer-events: none;
}

.c6 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c6 input:active {
  background: transparent;
}

.c6 .vf-canvas__node--active input {
  color: #132144;
}

.c3 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block vf-canvas__block--home"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c6 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Home"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Home
        </div>
      </div>
    </div>
    <section>
      <div
        className="c7 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c8"
          draggable={false}
        >
          <section
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13"
              >
                <span
                  className="c4 c14"
                  color="#5589eb"
                  size={16}
                >
                  <svg
                    data-file-name="SvgAddTeammate"
                  />
                </span>
              </div>
              <span
                className="c15"
              >
                <div
                  className="c16"
                >
                  Alexa, open Headspace
                </div>
              </span>
              <div
                className="c17 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c18"
    >
      <div
        className="c6 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Commands"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Commands
        </div>
      </div>
    </div>
    <section>
      <div
        className="c7 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c19"
          draggable={false}
        >
          <section
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13"
              >
                <span
                  className="c4 c20"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c15"
              >
                <div
                  className="c21"
                  onClick={[Function]}
                >
                  Help
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        className="c7 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c19"
          draggable={false}
        >
          <section
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13"
              >
                <span
                  className="c4 c20"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c15"
              >
                <div
                  className="c21"
                  onClick={[Function]}
                >
                  Stop
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Start Block Flow Connected 1`] = `
.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c19 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3c6997;
}

.c19 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c22 .c11 {
  color: #fff;
}

.c23 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c18 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c18 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c18,
.vf-canvas__step.vf-canvas__node--highlighted .c18 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c18:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c18 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c18 {
  z-index: -1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c20 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c21:hover {
  color: #4d8de6;
}

.c15 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c15,
.vf-canvas__node--disabled .c15 {
  cursor: inherit;
}

.c15::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#62778c1f,#62778c3d 100%);
}

.c15.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background: linear-gradient(to bottom,#5d9df51f,#5d9df53d 100%);
}

.c16 {
  position: absolute;
  right: -14px;
  width: 13px;
  height: 4px;
}

.c17 {
  stroke: rgb(141,162,181);
  stroke-width: 1.5px;
  fill: transparent;
  stroke-width: 1.5px;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.vf-canvas__link--highlighted .c17 {
  stroke: #2c85ff;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block vf-canvas__block--flow"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Flow Name"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Flow Name
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c5"
          draggable={false}
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#279745"
                  size={16}
                >
                  <svg
                    data-file-name="SvgInFlow"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  Conversation continues here
                </div>
              </span>
              <div
                className="c15 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
              <svg
                className="c16"
              >
                <path
                  className="c17"
                  d="M 0 4 L 13 4"
                />
              </svg>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Commands"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Commands
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c18"
          draggable={false}
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c19"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c20"
              >
                <div
                  className="c21"
                  onClick={[Function]}
                >
                  Help
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        className="c4 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c18"
          draggable={false}
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c19"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c20"
              >
                <div
                  className="c21"
                  onClick={[Function]}
                >
                  Stop
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Start Block Flow Start Block 1`] = `
.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c16 .c11 {
  color: #fff;
}

.c17 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c18 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c19 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c15 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c15,
.vf-canvas__node--disabled .c15 {
  cursor: inherit;
}

.c15::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c15.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c19 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block vf-canvas__block--flow"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Flow Name"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Flow Name
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c5"
          draggable={false}
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#279745"
                  size={16}
                >
                  <svg
                    data-file-name="SvgInFlow"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  Conversation continues here
                </div>
              </span>
              <div
                className="c15 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Start Block Flow With Commands 1`] = `
.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3c6997;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c20 .c11 {
  color: #fff;
}

.c21 .c11 {
  color: #6e849a;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c16 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c16 .c22 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c16,
.vf-canvas__step.vf-canvas__node--highlighted .c16 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c16:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c16 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c16 {
  z-index: -1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c5 .c22 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c5:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c5 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c5 {
  z-index: -1;
}

.c18 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c13 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c19 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c19:hover {
  color: #4d8de6;
}

.c15 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c15,
.vf-canvas__node--disabled .c15 {
  cursor: inherit;
}

.c15::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c15.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c4:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c22 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.vf-canvas--merging .c3,
.vf-canvas--creating-link .c3 {
  pointer-events: none;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c3 input:active {
  background: transparent;
}

.c3 .vf-canvas__node--active input {
  color: #132144;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block vf-canvas__block--flow"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Flow Name"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Flow Name
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c5"
          draggable={false}
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  color="#279745"
                  size={16}
                >
                  <svg
                    data-file-name="SvgInFlow"
                  />
                </span>
              </div>
              <span
                className="c13"
              >
                <div
                  className="c14"
                >
                  Conversation continues here
                </div>
              </span>
              <div
                className="c15 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Commands"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Commands
        </div>
      </div>
    </div>
    <section>
      <div
        className="c4 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c16"
          draggable={false}
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c17"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c18"
              >
                <div
                  className="c19"
                  onClick={[Function]}
                >
                  Help
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        className="c4 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c16"
          draggable={false}
        >
          <section
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c17"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c18"
              >
                <div
                  className="c19"
                  onClick={[Function]}
                >
                  Stop
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Start Block Google 1`] = `
.c5 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c5 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c20 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3c6997;
}

.c20 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5589eb;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c22 .c4 {
  color: #fff;
}

.c23 .c4 {
  color: #6e849a;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c10 .c11:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c19 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c19 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c19,
.vf-canvas__step.vf-canvas__node--highlighted .c19 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c19:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c19 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c19 {
  z-index: -1;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c8 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c8 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c8:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c8 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c8 {
  z-index: -1;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c16 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c21:hover {
  color: #4d8de6;
}

.c17 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--merging .c17,
.vf-canvas__node--disabled .c17 {
  cursor: inherit;
}

.c17::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c17.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c7:not(:last-of-type) {
  padding-bottom: 6px;
}

.c0 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.c0::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.vf-canvas__node:not(.vf-canvas__node--disabled) .c0:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered .c0 {
  cursor: copy;
}

.vf-canvas__node--focused .c0::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c0,
.vf-canvas__node--highlighted .c0,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c0::before,
.vf-canvas__node--highlighted .c0::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c0::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c0 {
  opacity: 0.7;
  cursor: not-allowed;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0 {
  opacity: 0.7;
}

.vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) .c0:not(.vf-canvas__node--merge-target):hover {
  opacity: 1;
}

.vf-canvas--markup .c0 {
  pointer-events: none !important;
}

.c0 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c6 {
  max-width: 100%;
}

.vf-canvas--merging .c6,
.vf-canvas--creating-link .c6 {
  pointer-events: none;
}

.c6 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c6 input:active {
  background: transparent;
}

.c6 .vf-canvas__node--active input {
  color: #132144;
}

.c3 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c1 {
  position: relative;
}

<div
  className="c0 vf-canvas__block vf-canvas__block--home"
>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c6 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Home"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Home
        </div>
      </div>
    </div>
    <section>
      <div
        className="c7 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c8"
          draggable={false}
        >
          <section
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13"
              >
                <span
                  className="c4 c14"
                  color="#5589eb"
                  size={16}
                >
                  <svg
                    data-file-name="SvgAddTeammate"
                  />
                </span>
              </div>
              <span
                className="c15"
              >
                <div
                  className="c16"
                >
                  Hey Google, start Headspace
                </div>
              </span>
              <div
                className="c17 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
  <div
    className="c1 vf-canvas__block__section"
  >
    <div
      className="c18"
    >
      <div
        className="c6 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Commands"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Commands
        </div>
      </div>
    </div>
    <section>
      <div
        className="c7 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c19"
          draggable={false}
        >
          <section
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13"
              >
                <span
                  className="c4 c20"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c15"
              >
                <div
                  className="c21"
                  onClick={[Function]}
                >
                  Help
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        className="c7 vf-canvas__step"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onDragStart={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c19"
          draggable={false}
        >
          <section
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13"
              >
                <span
                  className="c4 c20"
                  color="#3c6997"
                  size={16}
                >
                  <svg
                    data-file-name="SvgFlow"
                  />
                </span>
              </div>
              <span
                className="c15"
              >
                <div
                  className="c21"
                  onClick={[Function]}
                >
                  Stop
                </div>
              </span>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;
